resueve conflicto de fusion con upstream

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -20,7 +20,8 @@
         <li>1/4 taza de cilantro picado</li>
         <li>Aceite para freír</li>
         <li>Sal y pimienta al gusto</li>
-    </ul>  
+    </ul>   
+    <h4>Instrucciones</h4>  
     <ol>
         <li>Precalienta el horno a 180°C (350°F).</li>
         <li>Calienta un poco de aceite en una sartén y fríe ligeramente las tortillas por ambos lados para que sean más flexibles. Escúrrelas en papel absorbente.</li>
