--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Lasagna de garfield</h1>    
     <img src="images/lasagna.jpg" width="30%" height="30%" alt="lasagna">
-    <h4>Descripcion</h4>
+    <h4>Descripción</h4>
     <p>La lasaña es un plato tradicional italiano que consiste en capas de pasta, salsa de tomate, carne, queso y a veces verduras. Se hornea hasta que el queso esté dorado y burbujeante. Es un plato reconfortante y delicioso que se disfruta en todo el mundo.</p>   
     <h4>Ingredientes</h4>
     <ul>
@@ -23,6 +23,7 @@
         <li>Sal y pimienta al gusto</li>
         <li>Hierbas italianas (albahaca, orégano) al gusto</li>
     </ul>  
+    <h4>Instrucciones</h4>
     <ol>
         <li>Precalienta el horno a 180°C (350°F).</li>
         <li>En una sartén grande, cocina la carne molida hasta que esté dorada. Agrega la cebolla y el ajo, y cocina hasta que estén tiernos. Añade la salsa de tomate, sal, pimienta y hierbas italianas. Cocina a fuego lento durante 15-20 minutos.</li>
