--- a/recipes/hamburguesas.html
+++ b/recipes/hamburguesas.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Hamburguesa casera</h1>    
     <img src="images/hamburguesa.jpg" width="30%" height="30%" alt="hamburguesa">
-    <h4>Descripcion</h4>
+    <h4>Descripción</h4>
     <p>La hamburguesa es un plato clásico y versátil que consiste en una jugosa carne molida, generalmente de res, servida entre dos panes. Se puede personalizar con una variedad de ingredientes como queso, lechuga, tomate, cebolla, pepinillos</p>
     <h4>Ingredientes</h4>
     <ul>
@@ -22,6 +22,7 @@
         <li>Panes para hamburguesa</li>
         <li>Ingredientes adicionales al gusto (queso, lechuga, tomate, cebolla, pepinillos, salsas)</li>
     </ul>
+    <h4>Instrucciones</h4>
     <ol>
         <li>En un bol grande, mezcla la carne molida, el huevo, el pan rallado, la cebolla, el ajo, la mostaza, la salsa Worcestershire, la sal y la pimienta. Mezcla bien hasta que todos los ingredientes estén incorporados.</li>
         <li>Divide la mezcla en 4 porciones iguales y forma hamburguesas con las manos. Asegúrate de que sean un poco más grandes que los panes, ya que se encogerán al cocinarse.</li>
