se crearon recetas de comida para la gente que busca comida bien echa, ademas se agregaron style.css y se elimino una carpeta

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Recetas de odin </h1>
-    <ul> <li><a href="recipes/lasagna.html">Lasagna de garfield</a></li>
-         <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
-         <li><a href="recipes/hamburguesas.html">Hamburguesa casera</a></li>
+    <ul> 
+        <li class="navbar"><a href="recipes/lasagna.html">Lasagna de garfield</a></li>
+        <li class="navbar"><a href="recipes/enchiladas.html">Enchiladas</a></li>
+        <li class="navbar"><a href="recipes/hamburguesas.html">Hamburguesa casera</a></li>
     </ul>
 </body>
 </html>
